# TUB-RechnernetzePraxis

./: .gitignore  README.md
Praxis 0/praxis0/: hello_world.c
Praxis 0/praxis0/test/: conftest.py  test_praxis0.py
Praxis 1/praxis1/: CMakeLists.txt  helper.c  helper.h  main.c
Praxis 1/praxis1/test/: check_submission.sh  conftest.py  test_praxis1.py  util.py
Praxis 2/praxis2/: CMakeLists.txt  data.c  data.h  http.c  http.h  rn.lua  util.c  util.h  webserver.c
Praxis 2/praxis2/test/: check_submission.sh  conftest.py  dht.py  test_praxis1.py  test_praxis2.py  util.py
Praxis 3 Aufgabe-20250119/praxis3/test/: conftest.py  test_praxis3.py  util.py
Praxis 3 Aufgabe-20250129/praxis3/: CMakeLists.txt  requirements.txt  zmq_distributer.c  zmq_worker.c
Praxis 3 Aufgabe-20250129/praxis3/test/: test_praxis3.py  util.py
Praxis 3 Aufgabe-20250130/praxis3/: CMakeLists.txt  book_1.txt  book_2.txt  requirements.txt  test_complex_text.txt  test_simple_text.txt  valgrind_output_distributor.xml  valgrind_output_worker_0.xml  valgrind_output_worker_1.xml  valgrind_output_worker_2.xml  valgrind_output_worker_3.xml  valgrind_output_worker_4.xml  valgrind_output_worker_5.xml  valgrind_output_worker_6.xml  valgrind_output_worker_7.xml  valgrind_test.txt  zmq_distributor  zmq_distributor.c  zmq_worker  zmq_worker.c
Praxis 3 Aufgabe-20250130/praxis3/test/: conftest.py  test_praxis3.py  util.py
Praxis 3 Aufgabe-20250130/praxis3/test_files/: pg145.txt
